
add_executable(TestSingleScalarRenderer TestSingleScalarRenderer.cpp)
target_link_libraries(TestSingleScalarRenderer PRIVATE LibMultiVolumeRenderer)

add_executable(TestScalarAndVectorRenderer TestScalarAndVectorRenderer.cpp)
target_link_libraries(TestScalarAndVectorRenderer PRIVATE LibMultiVolumeRenderer)

add_executable(TestMultiScalarRenderer TestMultiScalarRenderer.cpp)
target_link_libraries(TestMultiScalarRenderer PRIVATE LibMultiVolumeRenderer)

add_executable(TestMultiIsoSurfaceRenderer TestMultiIsoSurfaceRenderer.cpp)
target_link_libraries(TestMultiIsoSurfaceRenderer PRIVATE LibMultiVolumeRenderer)

add_executable(TestOceanSingleScalarRenderer TestOceanSingleScalarRenderer.cpp)
target_link_libraries(TestOceanSingleScalarRenderer PRIVATE LibMultiVolumeRenderer)

add_executable(TestOceanMultiScalarRenderer TestOceanMultiScalarRenderer.cpp)
target_link_libraries(TestOceanMultiScalarRenderer PRIVATE LibMultiVolumeRenderer)

add_executable(TestOceanMultiIsoSurfaceRenderer TestOceanMultiIsoSurfaceRenderer.cpp)
target_link_libraries(TestOceanMultiIsoSurfaceRenderer PRIVATE LibMultiVolumeRenderer)

add_executable(TestGradientSimilarityMeasure TestGradientSimilarityMeasure.cpp)
target_link_libraries(TestGradientSimilarityMeasure PRIVATE LibMultiVolumeRenderer)

add_executable(TestIOAndMeasure TestIOAndMeasure.cpp)
target_link_libraries(TestIOAndMeasure PRIVATE LibMultiVolumeRenderer)